--- a/links.html
+++ b/links.html
@@ -15,10 +15,22 @@
       <div data-router-view="links" class="links">
         <div class="links-content">
           <div class="links-presentation">
-            <h1>Links page</h1>
-            <p>Here you can find me:</p>
+            <h1>Here you can find me:</h1>
           </div>
-          <img src="./images/links.png" alt="links" />
+          <div class="links-box">
+            <!-- <img src="./images/links.png" alt="links" /> -->
+            <!-- <img src="./images/logo-github.svg" alt="GitHub" /> -->
+
+            <a
+              href="https://github.com/m-gibas"
+              target="_blank"
+              rel="noreferrer noopener"
+              title="Click me!"
+            >
+              <!-- <ion-icon name="logo-github"></ion-icon> -->
+              <img src="./images/logo-github.svg" alt="GitHub" />
+            </a>
+          </div>
         </div>
       </div>
     </main>
