--- a/beer.html
+++ b/beer.html
@@ -16,7 +16,7 @@
         <div class="beer-content">
           <div class="beer-presentation">
             <h1>Beer page</h1>
-            <p>Yeah man, let's drink!</p>
+            <p>Let's drink!</p>
           </div>
           <img src="./images/beer.jpg" alt="beer" />
         </div>
